# glfwTemplate

./: .gitignore  CMakeLists.txt  README.md
src/core/: base.h  config.h.in  log.cc  log.h  main.cc  pch.h
src/window/: '  app_event.h  event.h  key_event.h  mouse_event.h  window.cc  window.h
